--- a/fly/loki/fly.toml
+++ b/fly/loki/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for lightdotso-loki on 2023-09-08T02:35:43-04:00
+# fly.toml app configuration file generated for lightdotso-loki on 2023-09-09T12:51:53-07:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -12,17 +12,13 @@ primary_region = "sjc"
 [http_service]
   internal_port = 3100
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = false
   auto_start_machines = true
   min_machines_running = 3
   [http_service.concurrency]
     type = "requests"
     hard_limit = 250
     soft_limit = 200
-
-[[mounts]]
-  source = "loki_storage"
-  destination = "/loki"
 
 [checks]
   [checks.health]
@@ -33,3 +29,7 @@ primary_region = "sjc"
     grace_period = "30s"
     method = "get"
     path = "/ready"
+
+[metrics]
+  port = 3100
+  path = "/metrics"
