--- a/crates/prometheus/Cargo.toml
+++ b/crates/prometheus/Cargo.toml
@@ -11,6 +11,7 @@
 [dependencies]
   axum = { workspace = true }
   chrono = { workspace = true }
+  eyre = { workspace = true }
   once_cell = { workspace = true }
   prometheus = { workspace = true }
   reqwest = { workspace = true }
