--- a/fly/loki/loki-config.yaml
+++ b/fly/loki/loki-config.yaml
@@ -73,6 +73,16 @@ compactor:
 ingester_client:
   remote_timeout: 30s
 
+# From: https://github.com/grafana/loki/issues/9110
+chunk_store_config:
+  chunk_cache_config:
+    async_cache_write_back_buffer_size: 1
+    default_validity: 5m
+    fifocache:
+      ttl: 5m
+      size: 0
+      max_size_bytes: 1GB
+
 # From: https://grafana.com/docs/loki/latest/configure/#runtime-configuration-file
 limits_config:
   # Whether the ingestion rate limit should be applied individually to each
