--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -75,66 +75,6 @@ jobs:
         working-directory: ./fly/consumer
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-  fly-deploy-consumer-error:
-    runs-on: ubuntu-latest
-    needs:
-      - fly-wait-docker
-    timeout-minutes: 30
-    steps:
-      - name: Fetch Head
-        uses: actions/checkout@v4
-      - name: Fly Install
-        uses: superfly/flyctl-actions/setup-flyctl@master
-      - name: Fly Deploy
-        run: flyctl deploy --remote-only
-        working-directory: ./fly/consumer-error
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-  fly-deploy-consumer-nfn:
-    runs-on: ubuntu-latest
-    needs:
-      - fly-wait-docker
-    timeout-minutes: 30
-    steps:
-      - name: Fetch Head
-        uses: actions/checkout@v4
-      - name: Fly Install
-        uses: superfly/flyctl-actions/setup-flyctl@master
-      - name: Fly Deploy
-        run: flyctl deploy --remote-only
-        working-directory: ./fly/consumer-nfn
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-  fly-deploy-consumer-retry:
-    runs-on: ubuntu-latest
-    needs:
-      - fly-wait-docker
-    timeout-minutes: 30
-    steps:
-      - name: Fetch Head
-        uses: actions/checkout@v4
-      - name: Fly Install
-        uses: superfly/flyctl-actions/setup-flyctl@master
-      - name: Fly Deploy
-        run: flyctl deploy --remote-only
-        working-directory: ./fly/consumer-retry
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-  fly-deploy-consumer-tx:
-    runs-on: ubuntu-latest
-    needs:
-      - fly-wait-docker
-    timeout-minutes: 30
-    steps:
-      - name: Fetch Head
-        uses: actions/checkout@v4
-      - name: Fly Install
-        uses: superfly/flyctl-actions/setup-flyctl@master
-      - name: Fly Deploy
-        run: flyctl deploy --remote-only
-        working-directory: ./fly/consumer-tx
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
   fly-deploy-exporter:
     runs-on: ubuntu-latest
     needs:
@@ -194,126 +134,6 @@ jobs:
       - name: Fly Deploy
         run: flyctl deploy --remote-only
         working-directory: ./fly/indexer
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-  fly-deploy-indexer-arbitrum:
-    runs-on: ubuntu-latest
-    needs:
-      - fly-wait-docker
-    timeout-minutes: 30
-    steps:
-      - name: Fetch Head
-        uses: actions/checkout@v4
-      - name: Fly Install
-        uses: superfly/flyctl-actions/setup-flyctl@master
-      - name: Fly Deploy
-        run: flyctl deploy --remote-only
-        working-directory: ./fly/indexer-arbitrum
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-  fly-deploy-indexer-avalanche:
-    runs-on: ubuntu-latest
-    needs:
-      - fly-wait-docker
-    timeout-minutes: 30
-    steps:
-      - name: Fetch Head
-        uses: actions/checkout@v4
-      - name: Fly Install
-        uses: superfly/flyctl-actions/setup-flyctl@master
-      - name: Fly Deploy
-        run: flyctl deploy --remote-only
-        working-directory: ./fly/indexer-avalanche
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-  fly-deploy-indexer-base:
-    runs-on: ubuntu-latest
-    needs:
-      - fly-wait-docker
-    timeout-minutes: 30
-    steps:
-      - name: Fetch Head
-        uses: actions/checkout@v4
-      - name: Fly Install
-        uses: superfly/flyctl-actions/setup-flyctl@master
-      - name: Fly Deploy
-        run: flyctl deploy --remote-only
-        working-directory: ./fly/indexer-base
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-  fly-deploy-indexer-bsc:
-    runs-on: ubuntu-latest
-    needs:
-      - fly-wait-docker
-    timeout-minutes: 30
-    steps:
-      - name: Fetch Head
-        uses: actions/checkout@v4
-      - name: Fly Install
-        uses: superfly/flyctl-actions/setup-flyctl@master
-      - name: Fly Deploy
-        run: flyctl deploy --remote-only
-        working-directory: ./fly/indexer-bsc
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-  fly-deploy-indexer-gnosis:
-    runs-on: ubuntu-latest
-    needs:
-      - fly-wait-docker
-    timeout-minutes: 30
-    steps:
-      - name: Fetch Head
-        uses: actions/checkout@v4
-      - name: Fly Install
-        uses: superfly/flyctl-actions/setup-flyctl@master
-      - name: Fly Deploy
-        run: flyctl deploy --remote-only
-        working-directory: ./fly/indexer-gnosis
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-  fly-deploy-indexer-polygon:
-    runs-on: ubuntu-latest
-    needs:
-      - fly-wait-docker
-    timeout-minutes: 30
-    steps:
-      - name: Fetch Head
-        uses: actions/checkout@v4
-      - name: Fly Install
-        uses: superfly/flyctl-actions/setup-flyctl@master
-      - name: Fly Deploy
-        run: flyctl deploy --remote-only
-        working-directory: ./fly/indexer-polygon
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-  fly-deploy-indexer-optimism:
-    runs-on: ubuntu-latest
-    needs:
-      - fly-wait-docker
-    timeout-minutes: 30
-    steps:
-      - name: Fetch Head
-        uses: actions/checkout@v4
-      - name: Fly Install
-        uses: superfly/flyctl-actions/setup-flyctl@master
-      - name: Fly Deploy
-        run: flyctl deploy --remote-only
-        working-directory: ./fly/indexer-optimism
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-  fly-deploy-indexer-sepolia:
-    runs-on: ubuntu-latest
-    needs:
-      - fly-wait-docker
-    timeout-minutes: 30
-    steps:
-      - name: Fetch Head
-        uses: actions/checkout@v4
-      - name: Fly Install
-        uses: superfly/flyctl-actions/setup-flyctl@master
-      - name: Fly Deploy
-        run: flyctl deploy --remote-only
-        working-directory: ./fly/indexer-sepolia
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
   fly-deploy-log-shipper:
@@ -428,22 +248,10 @@ jobs:
       - fly-deploy-bundler
       - fly-deploy-bundler-sepolia
       - fly-deploy-consumer
-      - fly-deploy-consumer-error
-      - fly-deploy-consumer-nfn
-      - fly-deploy-consumer-retry
-      - fly-deploy-consumer-tx
       - fly-deploy-exporter
       - fly-deploy-gas
       - fly-deploy-grafana
       - fly-deploy-indexer
-      - fly-deploy-indexer-arbitrum
-      - fly-deploy-indexer-avalanche
-      - fly-deploy-indexer-base
-      - fly-deploy-indexer-bsc
-      - fly-deploy-indexer-gnosis
-      - fly-deploy-indexer-polygon
-      - fly-deploy-indexer-optimism
-      - fly-deploy-indexer-sepolia
       - fly-deploy-log-shipper
       - fly-deploy-otel-collector
       - fly-deploy-paymaster
@@ -457,5 +265,5 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: fly-wait-docker,fly-deploy-bundler,fly-deploy-bundler-sepolia,fly-deploy-consumer,fly-deploy-consumer-error,fly-deploy-consumer-nfn,fly-deploy-consumer-retry,fly-deploy-consumer-tx,fly-deploy-exporter,fly-deploy-gas,fly-deploy-grafana,fly-deploy-indexer,fly-deploy-indexer-arbitrum,fly-deploy-indexer-avalanche,fly-deploy-indexer-base,fly-deploy-indexer-bsc,fly-deploy-indexer-gnosis,fly-deploy-indexer-polygon,fly-deploy-indexer-optimism,fly-deploy-indexer-sepolia,fly-deploy-log-shipper,fly-deploy-otel-collector,fly-deploy-paymaster,fly-deploy-prometheus,fly-deploy-rpc,fly-deploy-rpc-internal,fly-deploy-simulator
+          allowed-skips: fly-wait-docker,fly-deploy-bundler,fly-deploy-bundler-sepolia,fly-deploy-consumer,fly-deploy-exporter,fly-deploy-gas,fly-deploy-grafana,fly-deploy-indexer,fly-deploy-log-shipper,fly-deploy-otel-collector,fly-deploy-paymaster,fly-deploy-prometheus,fly-deploy-rpc,fly-deploy-rpc-internal,fly-deploy-simulator
           jobs: ${{ toJSON(needs) }}
