--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@
   members = [
     "apps/desktop/src-tauri",
     "bin",
+    "crates/app",
     "crates/autometrics",
     "crates/axum",
     "crates/bundler",
@@ -21,7 +22,9 @@
     "crates/prisma",
     "crates/redis",
     "crates/rpc",
+    "crates/rspc",
     "crates/simulator",
+    "crates/tauri",
     "crates/telegram",
     "crates/tracing",
     "tools/embedded-prisma",
@@ -76,6 +79,7 @@
   js-sys = "=0.3.56"
   jsonrpsee = { version = "0.18.2", features = ["server", "macros", "client"] }
   lazy_static = "1.4.0"
+  lightdotso-app = { path = "./crates/app" }
   lightdotso-autometrics = { path = "./crates/autometrics" }
   lightdotso-axum = { path = "./crates/axum" }
   lightdotso-bundler = { path = "./crates/bundler" }
@@ -92,15 +96,24 @@
   lightdotso-prisma = { path = "./crates/prisma" }
   lightdotso-redis = { path = "./crates/redis" }
   lightdotso-rpc = { path = "./crates/rpc" }
+  lightdotso-rspc = { path = "./crates/rspc" }
   lightdotso-simulator = { path = "./crates/simulator" }
+  lightdotso-tauri = { path = "./crates/tauri" }
   lightdotso-telegram = { path = "./crates/telegram" }
   lightdotso-tracing = { path = "./crates/tracing" }
   once_cell = "1.8.0"
+  rspc = { version = "0.1.3", feature = ["tauri"] }
   prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", features = [
     "mocking",
+    "rspc",
+    "sqlite",
+    "sqlite-create-many",
   ] }
   prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", features = [
     "mocking",
+    "rspc",
+    "sqlite",
+    "sqlite-create-many",
   ] }
   prometheus = "0.13.3"
   rand = "0.8.5"
@@ -123,6 +136,8 @@
     "test-utils",
   ] }
   silius-rpc = { git = "https://github.com/Vid201/silius", rev = "bc8b7b0039c9a2b02256fefc7eed3b2efc94bf96", package = "silius-rpc" }
+  tauri = { version = "1.4", features = ["shell-open"] }
+  tauri-build = { version = "1.4", features = [] }
   tokio = { version = "1", features = ["full"] }
   tonic = { version = "0.10.0", features = ["tls", "tls-roots"] }
   tower = { version = "0.4.12" }
