--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -1,23 +1,23 @@
 [package]
-name = "desktop"
-version = "0.0.0"
-description = "A Tauri App"
-authors = ["Light, Inc."]
-license = "AGPL-3.0-or-later"
-repository = "https://github.com/LightDotSo/LightDotSo"
-edition = "2021"
+  name = "desktop"
+  version = "0.0.0"
+  description = "A Tauri App"
+  authors = ["Light, Inc."]
+  license = "AGPL-3.0-or-later"
+  repository = "https://github.com/LightDotSo/LightDotSo"
+  edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.4", features = [] }
+  tauri-build = { workspace = true }
 
 [dependencies]
-tauri = { version = "1.4", features = ["shell-open"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+  serde = { workspace = true }
+  serde_json = { workspace = true }
+  tauri = { workspace = true }
 
 [features]
-# this feature is used for production builds or when `devPath` points to the filesystem
-# DO NOT REMOVE!!
-custom-protocol = ["tauri/custom-protocol"]
+  # this feature is used for production builds or when `devPath` points to the filesystem
+  # DO NOT REMOVE!!
+  custom-protocol = ["tauri/custom-protocol"]
