--- a/Cargo.toml
+++ b/Cargo.toml
@@ -104,12 +104,14 @@
   once_cell = "1.8.0"
   rspc = { version = "0.1.3", feature = ["tauri"] }
   prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", features = [
+    "migrations",
     "mocking",
     "rspc",
     "sqlite",
     "sqlite-create-many",
   ] }
   prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", features = [
+    "migrations",
     "mocking",
     "rspc",
     "sqlite",
