perf: ini app dir

--- a/crates/app/Cargo.toml
+++ b/crates/app/Cargo.toml
@@ -9,4 +9,7 @@
   repository.workspace = true
 
 [dependencies]
+  lazy_static = { workspace = true }
   lightdotso-prisma = { workspace = true }
+  platform-dirs = "0.3.0"
+  tokio = { workspace = true }
