--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -30,8 +30,8 @@
     "@babel/core": "^7.22.11",
     "@code-hike/lighter": "^0.8.2",
     "@hookform/resolvers": "^3.3.1",
-    "@lightdotso/auth": "workspace:*",
     "@lightdotso/kysely": "workspace:*",
+    "@lightdotso/next-auth": "workspace:*",
     "@lightdotso/prisma": "workspace:*",
     "@lightdotso/styles": "workspace:*",
     "@lightdotso/trpc": "workspace:*",
