--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "deploy:checkly": "checkly deploy",
     "dev:prisma": "make docker-compose-up",
     "dev:prisma:studio": "pnpm run studio:dev --filter @lightdotso/prisma",
-    "e2e:api:dev": "PLAYWRIGHT_TEST_BASE_URL=http://localhost:3000 playwright test --project=@lightdotso/api",
     "e2e:app:dev": "PLAYWRIGHT_TEST_BASE_URL=http://localhost:3001 playwright test --project=@lightdotso/app",
+    "e2e:auth:dev": "PLAYWRIGHT_TEST_BASE_URL=http://localhost:3000 playwright test --project=@lightdotso/auth",
     "e2e:playground:dev": "PLAYWRIGHT_TEST_BASE_URL=http://localhost:3004 playwright test --project=@lightdotso/playground",
     "eslint:cmd": "eslint --config .eslintrc.js --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint",
     "eslint:fix": "eslint --config .eslintrc.js --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint . --fix",
@@ -51,6 +51,7 @@
     "prisma": "make prisma",
     "prisma:turbo": "turbo run prisma",
     "release": "changeset publish",
+    "rspc": "make rspc",
     "solhint:cmd": "solhint \"contracts/**/*.sol\"",
     "solhint:fix": "solhint \"contracts/**/*.sol\" --fix",
     "solhint:lint": "solhint \"contracts/**/*.sol\"",
