--- a/packages/next-auth/package.json
+++ b/packages/next-auth/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lightdotso/auth",
+  "name": "@lightdotso/next-auth",
   "version": "0.0.1-pre.0",
   "private": false,
   "homepage": "https://github.com/LightDotSo/LightDotSo",
