--- a/.github/workflows/prisma.yml
+++ b/.github/workflows/prisma.yml
@@ -44,6 +44,9 @@ jobs:
       - name: Make Prisma
         run: |
           pnpm turbo run prisma
+      - name: Make Rspc
+        run: |
+          pnpm turbo run rspc
       - name: Check Changes
         run: |
           git diff --quiet
