--- a/.prettierignore
+++ b/.prettierignore
@@ -4,6 +4,8 @@ apps/docs/src/pages/posts/**/*.mdx
 apps/ui/src/components/**
 configurations/prisma/src/zod/**
 
+configurations/rspc/src/bindings.ts
+
 *.html
 *.xcarchive
 
