--- a/Cargo.toml
+++ b/Cargo.toml
@@ -104,14 +104,12 @@
   prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", features = [
     "migrations",
     "mocking",
-    "rspc",
     "sqlite",
     "sqlite-create-many",
   ] }
   prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", features = [
     "migrations",
     "mocking",
-    "rspc",
     "sqlite",
     "sqlite-create-many",
   ] }
@@ -157,4 +155,8 @@
   uniffi = "0.24.2"
   uniffi_macros = "0.24.2"
   uniffi_build = { version = "0.24.2", features = ["builtin-bindgen"] }
+  utoipa = "3.5.0"
+  utoipa-swagger-ui = "3.1.5"
+  utoipa-redoc = "0.1.0"
+  utoipa-rapidoc = "0.1.0"
   uuid = { version = "1.3.4", features = ["v4", "fast-rng", "serde"] }
