--- a/crates/axum/Cargo.toml
+++ b/crates/axum/Cargo.toml
@@ -35,6 +35,7 @@
   ] }
   tower-http = { workspace = true, features = ["cors"] }
   tower_governor = { workspace = true }
-  utoipa-rapidoc = { workspace = true }
-  utoipa-redoc = { workspace = true }
-  utoipa-swagger-ui = { workspace = true }
+  utoipa = { version = "3.5.0", features = ["axum_extras"] }
+  utoipa-rapidoc = { version = "0.1.0", features = ["axum"] }
+  utoipa-redoc = { version = "0.1.0", features = ["axum"] }
+  utoipa-swagger-ui = { version = "3.1.5", features = ["axum"] }
