feat: ini percentage

--- a/crates/redis/Cargo.toml
+++ b/crates/redis/Cargo.toml
@@ -10,4 +10,5 @@
 
 [dependencies]
   lazy_static = { workspace = true }
+  lightdotso-tracing = { workspace = true }
   redis = { version = "0.23.2", features = ["tls-native-tls"] }
