--- a/fly/api/fly.toml
+++ b/fly/api/fly.toml
@@ -20,7 +20,7 @@ kill_timeout = "5s"
 [http_service]
   internal_port = 3000
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = false
   auto_start_machines = true
   min_machines_running = 1
   [http_service.concurrency]
