--- a/fly/api/fly.toml
+++ b/fly/api/fly.toml
@@ -12,7 +12,7 @@ kill_timeout = "5s"
   entrypoint = ["/usr/local/bin/api"]
 
 [build]
-  image = "ghcr.io/lightdotso/lightdotso:sha-89759e6c9dddeaac9cf5bfc0350e6f57db4a9b6a"
+  image = "ghcr.io/lightdotso/lightdotso:latest"
 
 [deploy]
   strategy = "bluegreen"
@@ -22,7 +22,7 @@ kill_timeout = "5s"
   force_https = true
   auto_stop_machines = false
   auto_start_machines = true
-  min_machines_running = 1
+  min_machines_running = 3
   [http_service.concurrency]
     type = "requests"
     hard_limit = 250
