--- a/fly/indexer/fly.toml
+++ b/fly/indexer/fly.toml
@@ -18,6 +18,7 @@ kill_timeout = "5s"
   strategy = "canary"
 
 [http_service]
+  internal_port = 3000
   force_https = true
   auto_stop_machines = true
   auto_start_machines = true
