--- a/apps/subgraph/package.json
+++ b/apps/subgraph/package.json
@@ -23,14 +23,15 @@
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "^0.57.0",
-    "@graphprotocol/graph-ts": "^0.31.0",
-    "assemblyscript": "^0.27.9"
+    "@graphprotocol/graph-ts": "^0.31.0"
   },
   "devDependencies": {
     "@lightdotso/tsconfig": "workspace:*",
     "@types/node": "^20.5.7",
+    "assemblyscript": "^0.19.20",
     "matchstick-as": "0.5.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "wabt": "1.0.24"
   },
   "publishConfig": {
     "access": "restricted"
