--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -9,11 +9,7 @@
   repository.workspace = true
 
 [dependencies]
-  autometrics = { workspace = true, features = [
-    "prometheus-client-0_21",
-    "prometheus-exporter",
-    "exemplars-tracing",
-  ] }
+  autometrics = { workspace = true }
   axum = { workspace = true }
   ethers = { workspace = true }
   eyre = { workspace = true }
