--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,7 +56,10 @@
   anvil = { git = "https://github.com/foundry-rs/foundry", rev = "236208f72a0af26aa0446336132e05edb7024ca6", package = "anvil" }
   async-stream = "0.3.5"
   async-trait = "0.1.73"
-  autometrics = "0.6.0"
+  autometrics = { version = "*", features = [
+    "prometheus-0_13",
+    "prometheus-exporter",
+  ], default-features = false }
   axum = { version = "0.6.16", features = ["ws"] }
   backon = "0.4.1"
   base64 = "0.21.3"
