--- a/Cargo.toml
+++ b/Cargo.toml
@@ -104,6 +104,15 @@
   lightdotso-tauri = { path = "./crates/tauri" }
   lightdotso-telegram = { path = "./crates/telegram" }
   lightdotso-tracing = { path = "./crates/tracing" }
+  opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
+  opentelemetry-otlp = { version = "0.12.0", features = [
+    "grpc-tonic",
+    "reqwest-client",
+    "tls",
+    "tls-roots",
+  ] }
+  opentelemetry-prometheus = "0.12.0"
+  opentelemetry_sdk = { version = "0.19.0", features = ["metrics"] }
   once_cell = "1.8.0"
   prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", features = [
     "migrations",
