--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,7 +57,7 @@
   async-stream = "0.3.5"
   async-trait = "0.1.73"
   autometrics = { version = "*", features = [
-    "prometheus-0_13",
+    "opentelemetry-0_20",
     "prometheus-exporter",
   ], default-features = false }
   axum = { version = "0.6.16", features = ["ws"] }
@@ -104,15 +104,15 @@
   lightdotso-tauri = { path = "./crates/tauri" }
   lightdotso-telegram = { path = "./crates/telegram" }
   lightdotso-tracing = { path = "./crates/tracing" }
-  opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
-  opentelemetry-otlp = { version = "0.12.0", features = [
+  opentelemetry = { version = "0.20.0", features = ["metrics", "rt-tokio"] }
+  opentelemetry-otlp = { version = "0.13.0", features = [
     "grpc-tonic",
     "reqwest-client",
     "tls",
     "tls-roots",
   ] }
-  opentelemetry-prometheus = "0.12.0"
-  opentelemetry_sdk = { version = "0.19.0", features = ["metrics"] }
+  opentelemetry-prometheus = "0.13.0"
+  opentelemetry_sdk = { version = "0.20.0", features = ["metrics"] }
   once_cell = "1.8.0"
   prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", features = [
     "migrations",
