--- a/crates/consumer/Cargo.toml
+++ b/crates/consumer/Cargo.toml
@@ -18,7 +18,7 @@
   lightdotso-indexer = { workspace = true }
   lightdotso-kafka = { workspace = true }
   lightdotso-notifier = { workspace = true }
-  lightdotso-prometheus = { workspace = true }
+  lightdotso-opentelemetry = { workspace = true }
   lightdotso-tracing = { workspace = true }
   opentelemetry = { workspace = true }
   rdkafka = { workspace = true }
