--- a/crates/consumer/Cargo.toml
+++ b/crates/consumer/Cargo.toml
@@ -18,6 +18,8 @@
   lightdotso-indexer = { workspace = true }
   lightdotso-kafka = { workspace = true }
   lightdotso-notifier = { workspace = true }
+  lightdotso-opentelemetry = { workspace = true }
   lightdotso-tracing = { workspace = true }
+  opentelemetry = { workspace = true }
   rdkafka = { workspace = true }
   serde_json = { workspace = true }
