--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -156,21 +156,6 @@ jobs:
         working-directory: ./fly/consumer-tx
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-  fly-deploy-exporter:
-    runs-on: ubuntu-latest
-    needs:
-      - fly-wait-docker
-    timeout-minutes: 30
-    steps:
-      - name: Fetch Head
-        uses: actions/checkout@v4
-      - name: Fly Install
-        uses: superfly/flyctl-actions/setup-flyctl@master
-      - name: Fly Deploy
-        run: flyctl deploy --remote-only
-        working-directory: ./fly/exporter
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
   fly-deploy-gas:
     runs-on: ubuntu-latest
     needs:
@@ -474,7 +459,6 @@ jobs:
       - fly-deploy-consumer-nfn
       - fly-deploy-consumer-retry
       - fly-deploy-consumer-tx
-      - fly-deploy-exporter
       - fly-deploy-gas
       - fly-deploy-grafana
       - fly-deploy-graph
@@ -501,5 +485,5 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: fly-wait-docker,fly-deploy-api,fly-deploy-bundler,fly-deploy-bundler-sepolia,fly-deploy-consumer,fly-deploy-consumer-error,fly-deploy-consumer-nfn,fly-deploy-consumer-retry,fly-deploy-consumer-tx,fly-deploy-exporter,fly-deploy-gas,fly-deploy-grafana,fly-deploy-graph,fly-deploy-ipfs,fly-deploy-indexer,fly-deploy-indexer-arbitrum,fly-deploy-indexer-avalanche,fly-deploy-indexer-base,fly-deploy-indexer-bsc,fly-deploy-indexer-gnosis,fly-deploy-indexer-polygon,fly-deploy-indexer-optimism,fly-deploy-indexer-sepolia,fly-deploy-log-shipper,fly-deploy-otel-collector,fly-deploy-paymaster,fly-deploy-prometheus,fly-deploy-rpc,fly-deploy-rpc-internal,fly-deploy-simulator
+          allowed-skips: fly-wait-docker,fly-deploy-api,fly-deploy-bundler,fly-deploy-bundler-sepolia,fly-deploy-consumer,fly-deploy-consumer-error,fly-deploy-consumer-nfn,fly-deploy-consumer-retry,fly-deploy-consumer-tx,fly-deploy-gas,fly-deploy-grafana,fly-deploy-graph,fly-deploy-ipfs,fly-deploy-indexer,fly-deploy-indexer-arbitrum,fly-deploy-indexer-avalanche,fly-deploy-indexer-base,fly-deploy-indexer-bsc,fly-deploy-indexer-gnosis,fly-deploy-indexer-polygon,fly-deploy-indexer-optimism,fly-deploy-indexer-sepolia,fly-deploy-log-shipper,fly-deploy-otel-collector,fly-deploy-paymaster,fly-deploy-prometheus,fly-deploy-rpc,fly-deploy-rpc-internal,fly-deploy-simulator
           jobs: ${{ toJSON(needs) }}
